2022-02-11  Wenson Hsieh  <wenson_hsieh@apple.com>

        [iOS] Add support for a "markup image" item in the callout bar when selecting a single image
        https://bugs.webkit.org/show_bug.cgi?id=236415
        rdar://88714333

        Reviewed by Aditya Keerthi.

        This patch introduces support for a new "Markup Image" callout menu item, which is only shown when the user has
        selected exactly one image. If the image is suitable for "Markup Image" (that is, the relevant VisionKit API
        returns a non-null image), then we show a new item in the callout bar which, when activated, replaces the
        current selection with the image returned by the aforementioned VisionKit API.

        See below for more details.

        * Platform/cocoa/TextRecognitionUtilities.h:
        * Platform/cocoa/TextRecognitionUtilities.mm:
        (WebKit::isImageAnalysisMarkupSystemFeatureEnabled):

        Add a new helper method to return whether or not the corresponding system feature flag is enabled.

        * Shared/EditorState.cpp:
        (WebKit::EditorState::PostLayoutData::encode const):
        (WebKit::EditorState::PostLayoutData::decode):
        * Shared/EditorState.h:

        Add an optional `ElementContext` that's populated only if the user's selection spans a single HTMLImageElement.

        * UIProcess/API/ios/WKWebViewIOS.mm:
        (-[WKWebView didMoveToWindow]):
        * UIProcess/WebPageProxy.cpp:
        (WebKit::WebPageProxy::requestImageBitmap):

        Add a new async IPC message that allows the UI process to grab a ShareableBitmap handle (along with the MIME
        type of the source image) given an ElementContext that identifies an image element.

        * UIProcess/WebPageProxy.h:
        * UIProcess/ios/WKContentViewInteraction.h:

        Cache the last result from requesting "Image Markup" data from VisionKit in `_imageAnalysisMarkupResults`, and